trunk/src/lexicalAnalysis/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package lexicalAnalysis;

import syntaxtree.*;
import java.util.ArrayList;

public class Parser implements ParserConstants {

/*A função Program() analisa a execusão das variaveis do tipo MainClass() e ClassDecl() nela */
  static final public Program Program() throws ParseException {
  MainClass m; ClassDecl cd; ClassDeclList cdl = new ClassDeclList();
    m = MainClass();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      cd = ClassDecl();
                                          cdl.addElement(cd);
    }
                                                                     {if (true) return new Program(m,cdl);}
    throw new Error("Missing return statement in function");
  }

/* Nesssa função é analisado a declaração de uma variavel de um certo tipo */
  static final public VarDecl VarDecl() throws ParseException {
  Type t; Token i;
    t = Type();
    i = jj_consume_token(ID);
    jj_consume_token(SEMICOLON);
                                       {if (true) return new VarDecl(t,new Identifier(i.image));}
    throw new Error("Missing return statement in function");
  }

/*Nessa função é analisado a construção de um método  */
  static final public MethodDecl MethodDecl() throws ParseException {
  Type t; Token i; Formal f; VarDecl vd; Statement s; Exp e;
  FormalList fl = new FormalList(); VarDeclList vl = new VarDeclList(); StatementList sl = new StatementList();
    jj_consume_token(PUBLIC);
    t = Type();
    i = jj_consume_token(ID);
    jj_consume_token(LPAREN);
    fl = FormalList();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_2:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_2;
      }
      vd = VarDecl();
                                  vl.addElement(vd);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case SYSTEMOUTPRINTLN:
      case LBRACE:
      case ID:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_3;
      }
      s = Statement();
                                                                             sl.addElement(s);
    }
    jj_consume_token(RETURN);
    e = Exp();
    jj_consume_token(SEMICOLON);
    jj_consume_token(RBRACE);
    {if (true) return new MethodDecl(t,new Identifier(i.image),fl,vl,sl,e);}
    throw new Error("Missing return statement in function");
  }

/*Nessa função é analizado a classe main: os tokens ai1 ai2  é reconhecido
por conjuntos de caracteres da calsse main, o Statement as também é reconhedo
 pelo Statement difinido na propria função */
  static final public MainClass MainClass() throws ParseException {
  Token ai1,ai2; Statement as;
    jj_consume_token(CLASS);
    ai1 = jj_consume_token(ID);
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(STRING);
    jj_consume_token(LBRACKET);
    jj_consume_token(RBRACKET);
    ai2 = jj_consume_token(ID);
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    as = Statement();
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
    {if (true) return new MainClass(new Identifier(ai1.image),new Identifier(ai2.image),as);}
    throw new Error("Missing return statement in function");
  }

/* Nesssa função é analisado a declaração de uma variavel */
  static final public ClassDecl ClassDecl() throws ParseException {
  Token id; ClassDecl cd;
    jj_consume_token(CLASS);
    id = jj_consume_token(ID);
    cd = ClassDeclII(new Identifier(id.image));
    {if (true) return cd;}
    throw new Error("Missing return statement in function");
  }

/*Nessa função é analisado a construção de uma classe */
  static final public ClassDecl ClassDeclII(Identifier i) throws ParseException {
  Token id; MethodDecl md; VarDecl vd = null; VarDeclList vdl = new VarDeclList(); MethodDeclList mdl = new MethodDeclList();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      jj_consume_token(LBRACE);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
        case BOOLEAN:
        case ID:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_4;
        }
        vd = VarDecl();
                    vdl.addElement(vd);
      }
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PUBLIC:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_5;
        }
        md = MethodDecl();
                                                                  mdl.addElement(md);
      }
      jj_consume_token(RBRACE);
    {if (true) return new ClassDeclSimple(i, vdl, mdl);}
      break;
    default:
      jj_la1[6] = jj_gen;
      if (jj_2_2(3)) {
        jj_consume_token(EXTENDS);
        id = jj_consume_token(ID);
        jj_consume_token(LBRACE);
        label_6:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INT:
          case BOOLEAN:
          case ID:
            ;
            break;
          default:
            jj_la1[4] = jj_gen;
            break label_6;
          }
          vd = VarDecl();
                    vdl.addElement(vd);
        }
        label_7:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case PUBLIC:
            ;
            break;
          default:
            jj_la1[5] = jj_gen;
            break label_7;
          }
          md = MethodDecl();
                                                                  mdl.addElement(md);
        }
        jj_consume_token(RBRACE);
    {if (true) return new ClassDeclExtends(i,new Identifier(id.image),vdl,mdl);}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

/*Nessa função é analisado o tipo de uma variavel, se é inteiro ou boleano  */
  static final public Type Type() throws ParseException {
  Token id; Type type;
    if (jj_2_3(2)) {
      jj_consume_token(INT);
      type = TypeII();
                            {if (true) return type;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
        jj_consume_token(BOOLEAN);
                {if (true) return new BooleanType();}
        break;
      case ID:
        id = jj_consume_token(ID);
  {if (true) return new IdentifierType(id.image);}
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

/*Nessa função é analisado se o tipo de uma variavel, é inteiro ou uma lista de inteiros  */
  static final public Type TypeII() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACKET:
      jj_consume_token(LBRACKET);
      jj_consume_token(RBRACKET);
                                {if (true) return new IntArrayType();}
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
                                                                  {if (true) return new IntegerType();}
    throw new Error("Missing return statement in function");
  }

/* A função FormalRest() do tipo Formal é sempre o próximo parametro de uma funçao*/
  static final public Formal FormalRest() throws ParseException {
  Type t; Token i;
    jj_consume_token(COMMA);
    t = Type();
    i = jj_consume_token(ID);
                                    {if (true) return new Formal(t,new Identifier(i.image));}
    throw new Error("Missing return statement in function");
  }

/*Na função Statemant é analizado as condição do tipo "if", "while",
onde cada um é considerado um statement. Também as funções Block que
garega uma lista de statement, função "print" que mostra na tela uma expressão,
 uma identificador de Variavel "a" do tipo IdentifierAssign da função StatementII*/
  static final public Statement Statement() throws ParseException {
  Statement s1; Statement s2; StatementList sl = new StatementList(); Exp e; Exp e2; Token i; Statement s; IdentifierAssign a;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      jj_consume_token(LBRACE);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case WHILE:
        case SYSTEMOUTPRINTLN:
        case LBRACE:
        case ID:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_8;
        }
        s1 = Statement();
                                 sl.addElement(s1);
      }
      jj_consume_token(RBRACE);
    {if (true) return new Block(sl);}
      break;
    case IF:
      jj_consume_token(IF);
      jj_consume_token(LPAREN);
      e = Exp();
      jj_consume_token(RPAREN);
      s1 = Statement();

      jj_consume_token(ELSE);
      s2 = Statement();
                                                                                        {if (true) return new If(e,s1,s2);}
      break;
    case WHILE:
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      e = Exp();
      jj_consume_token(RPAREN);
      s1 = Statement();
                                                               {if (true) return new While(e,s1);}
      break;
    case SYSTEMOUTPRINTLN:
      jj_consume_token(SYSTEMOUTPRINTLN);
      jj_consume_token(LPAREN);
      e = Exp();
      jj_consume_token(RPAREN);
      jj_consume_token(SEMICOLON);
                                                                       {if (true) return new Print(e);}
      break;
    default:
      jj_la1[10] = jj_gen;
      if (jj_2_4(2)) {
        i = jj_consume_token(ID);
        a = StatementII(new Identifier(i.image));
                                                        a.id = new Identifier(i.image); {if (true) return a;}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

/*A função StatementII é um IdentifierAssign que analisa a atribuição
 de um expressão ou lista de expressão a uma variavel*/
  static final public IdentifierAssign StatementII(Identifier i) throws ParseException {
  Exp exp,exp2;
    if (jj_2_5(2)) {
      jj_consume_token(ASSIGN);
      exp = Exp();
      jj_consume_token(SEMICOLON);
                                         {if (true) return new Assign(i, exp);}
    } else if (jj_2_6(2)) {
      jj_consume_token(LBRACKET);
      exp = Exp();
      jj_consume_token(RBRACKET);
      jj_consume_token(ASSIGN);
      exp2 = Exp();
      jj_consume_token(SEMICOLON);
                                                                                {if (true) return new ArrayAssign(i, exp, exp2 );}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/* A função FormalList() analisa as vaviaveis de certo tipo que faz parte
do parametro de uma função*/
  static final public FormalList FormalList() throws ParseException {
  Type t; Formal f; Token i;
  FormalList fl = new FormalList();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case BOOLEAN:
    case ID:
      t = Type();
      i = jj_consume_token(ID);
                         fl.addElement(new Formal(t,new Identifier(i.image)));
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[11] = jj_gen;
          break label_9;
        }
        f = FormalRest();
                                                                                                     fl.addElement(f);
      }
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
  {if (true) return fl;}
    throw new Error("Missing return statement in function");
  }

/*Nessa função é analisado operações entre tokens com operadores
"PLUS, MINUS, MULTIPLY, LT" e funcionamento token "DOT" e tratamento
 da recursividade a esquerda*/
  static final public Exp ExpL(Exp expL) throws ParseException {
  Exp exp1, exp2, exp3; ExpList el = new ExpList(); Token t;
    if (jj_2_9(2)) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        jj_consume_token(PLUS);
        exp1 = Exp();
        exp2 = ExpL(new Plus(expL,exp1));
    if (exp2 != null) { {if (true) return exp2;} }
    else { {if (true) return new Plus(expL,exp1);} }
        break;
      case MINUS:
        jj_consume_token(MINUS);
        exp1 = Exp();
        exp2 = ExpL(new Minus(expL, exp1));
    if (exp2 != null) { {if (true) return exp2;} }
    else { {if (true) return new Minus(expL,exp1);} }
        break;
      case MULTIPLY:
        jj_consume_token(MULTIPLY);
        exp1 = Exp();
        exp2 = ExpL(new Times(expL, exp1));
    if (exp2 != null) { {if (true) return exp2;} }
    else { {if (true) return new Times(expL,exp1);} }
        break;
      case LT:
        jj_consume_token(LT);
        exp1 = Exp();
        exp2 = ExpL(new LessThan(expL, exp1));
    if (exp2 != null) { {if (true) return exp2;} }
    else { {if (true) return new LessThan(expL,exp1);} }
        break;
      case AND:
        jj_consume_token(AND);
        exp1 = Exp();
        exp2 = ExpL(new And(expL, exp1));
    if (exp2 != null) { {if (true) return exp2;} }
    else { {if (true) return new And(expL,exp1);} }
        break;
      case LBRACKET:
        jj_consume_token(LBRACKET);
        exp1 = Exp();
        jj_consume_token(RBRACKET);
        exp2 = ExpL(new ArrayLookup(expL,exp1));
    if (exp2 != null) { {if (true) return exp2;} }
    else { {if (true) return new ArrayLookup(expL,exp1);} }
        break;
      default:
        jj_la1[15] = jj_gen;
        if (jj_2_7(2)) {
          jj_consume_token(DOT);
          jj_consume_token(LENGTH);
          exp2 = ExpL(new ArrayLength(expL));
    if (exp2 != null) { {if (true) return exp2;} }
    else { {if (true) return new ArrayLength(expL);} }
        } else if (jj_2_8(2)) {
          jj_consume_token(DOT);
          t = jj_consume_token(ID);
          jj_consume_token(LPAREN);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case TRUE:
          case FALSE:
          case NEW:
          case THIS:
          case LPAREN:
          case NOT:
          case INTEGER_LITERAL:
          case ID:
            exp1 = Exp();
                                                              el.addElement(exp1);
            label_10:
            while (true) {
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case COMMA:
                ;
                break;
              default:
                jj_la1[13] = jj_gen;
                break label_10;
              }
              jj_consume_token(COMMA);
              exp2 = Exp();
                           el.addElement(exp2);
            }
            break;
          default:
            jj_la1[14] = jj_gen;
            ;
          }
          jj_consume_token(RPAREN);
          exp3 = ExpL(new Call(expL, new Identifier(t.image), el));
    if (exp3 != null) { {if (true) return exp3;} }
    else { {if (true) return new Call(expL, new Identifier(t.image), el);} }
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } else {
      ;
    }
  {if (true) return null;}
    throw new Error("Missing return statement in function");
  }

/*Nessa função é analisado o funcionamento de tokens do tipo "INTEGER_LITERAL,
beleano TRUE e FALSE" e de alguns tokens como "ID, NOT, THIS, NEW" com expressões
e tratamento da recursividade a esquerda*/
  static final public Exp Exp() throws ParseException {
  Token t; Exp exp, exp2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      t = jj_consume_token(INTEGER_LITERAL);
      exp = ExpL(new IntegerLiteral(Integer.parseInt(t.image)));
    if(exp != null)
    { {if (true) return exp;} }
    else
    { {if (true) return new IntegerLiteral(Integer.parseInt(t.image));} }
      break;
    case TRUE:
      jj_consume_token(TRUE);
      exp = ExpL(new True());
    if(exp != null) { {if (true) return exp;} }
    else { {if (true) return new True();} }
      break;
    case FALSE:
      jj_consume_token(FALSE);
      exp = ExpL(new False());
    if(exp != null) { {if (true) return exp;} }
    else { {if (true) return new False();} }
      break;
    case ID:
      t = jj_consume_token(ID);
      exp = ExpL(new IdentifierExp(t.image));
    if(exp != null) { {if (true) return exp;} }
    else { {if (true) return new IdentifierExp(t.image);} }
      break;
    case THIS:
      jj_consume_token(THIS);
      exp = ExpL(new This());
    if(exp != null) { {if (true) return exp;} }
    else { {if (true) return new This();} }
      break;
    default:
      jj_la1[16] = jj_gen;
      if (jj_2_10(2)) {
        jj_consume_token(NEW);
        jj_consume_token(INT);
        jj_consume_token(LBRACKET);
        exp = Exp();
        jj_consume_token(RBRACKET);
        exp2 = ExpL(new NewArray(exp));
    if(exp2 != null) { {if (true) return exp2;} }
    else { {if (true) return new NewArray(exp);} }
      } else if (jj_2_11(2)) {
        jj_consume_token(NEW);
        t = jj_consume_token(ID);
        jj_consume_token(LPAREN);
        jj_consume_token(RPAREN);
        exp = ExpL(new NewObject(new Identifier(t.image)));
    if (exp != null) { {if (true) return exp;} }
    else { {if (true) return new NewObject(new Identifier(t.image));} }
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOT:
          jj_consume_token(NOT);
          exp = Exp();
          exp2 = ExpL(new Not(exp));
    if (exp2 != null) { {if (true) return exp2;} }
    else { {if (true) return new Not(exp);} }
          break;
        case LPAREN:
          jj_consume_token(LPAREN);
          exp = Exp();
          jj_consume_token(RPAREN);
          exp2 = ExpL(exp);
        if (exp2 != null) { {if (true) return exp2;} }
      else { {if (true) return exp;} }
          break;
        default:
          jj_la1[17] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_3_7() {
    if (jj_scan_token(DOT)) return true;
    if (jj_scan_token(LENGTH)) return true;
    return false;
  }

  static private boolean jj_3R_27() {
    if (jj_scan_token(THIS)) return true;
    return false;
  }

  static private boolean jj_3R_22() {
    if (jj_scan_token(LBRACKET)) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_22()) jj_scanpos = xsp;
    return false;
  }

  static private boolean jj_3R_20() {
    if (jj_scan_token(LBRACKET)) return true;
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3R_26() {
    if (jj_scan_token(ID)) return true;
    return false;
  }

  static private boolean jj_3_6() {
    if (jj_scan_token(LBRACKET)) return true;
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3R_19() {
    if (jj_scan_token(AND)) return true;
    if (jj_3R_14()) return true;
    return false;
  }

